--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,13 +14,14 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp" android:textSize="18sp" android:id="@+id/textView"/>
+            android:layout_marginTop="16dp" android:textSize="24sp" android:id="@+id/textView"/>
     <ListView
             android:layout_width="0dp"
             android:layout_height="0dp" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginBottom="8dp"
-            android:id="@+id/categoryListView"/>
+            android:id="@+id/categoryListView"
+            android:divider="@null"/>
 
 </android.support.constraint.ConstraintLayout>
