--- a/app/src/main/res/layout/product_list_item.xml
+++ b/app/src/main/res/layout/product_list_item.xml
@@ -6,22 +6,23 @@
 
     <ImageView
             android:layout_width="0dp"
-            android:layout_height="wrap_content" app:srcCompat="@drawable/hat1"
+            android:layout_height="0dp" app:srcCompat="@drawable/hat1"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/imageView" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintDimensionRatio="w,1:1"/>
+            android:id="@+id/productImage" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintDimensionRatio="w,1:1" android:scaleType="center" android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"/>
     <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/textView2" tools:text="Beanie" android:textSize="18sp" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" android:textAlignment="center"
+            android:id="@+id/productName" tools:text="Beanie" android:textSize="18sp" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/productImage" android:textAlignment="center"
             android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView3" tools:text="$18" app:layout_constraintEnd_toEndOf="parent"
+            android:id="@+id/productPrice" tools:text="$18" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginBottom="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/productName" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="1.0"/>
 </android.support.constraint.ConstraintLayout>
